feat: add chat api
